webserver/webserver-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: webserver-request-authentication
spec:
  selector:
    matchLabels:
      app: webserver
  jwtRules:
    - issuer: "https://posd-app-keycloak.com/realms/Istio"
      jwksUri: "http://10.105.139.64:88/realms/Istio/protocol/openid-connect/certs"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: webserver-auth
spec:
  selector:
    matchLabels:
      app: webserver
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET"]
            paths:
              [
                "/",
                "/static/tailwind/tailwind.css",
                "/books",
                "/books/*",
                "/dashboard",
                "/login",
              ]
        - operation:
            methods: ["POST"]
            paths: ["/login", "/logout"]
